fix display on mobile

--- a/app/stylesheets/panels.css
+++ b/app/stylesheets/panels.css
@@ -91,10 +91,6 @@
 	background: #0070ba url("../images/Dances 2 White-sml.png") no-repeat 10px 13px;
 }
 
-.col1, .col2, .col3, .col4, .col5, .col6, .col7 {
-  	display: inline-block;
-  	vertical-align:  top;
-}
 
 .tabular {
 	width: 100%;
@@ -113,11 +109,6 @@
 .tabular td {
 	padding: 0px 0px 8px 8px;
 	vertical-align: text-top;
-}
-
-.classTable,
-.eventsTable {
-  	min-width: 1230px;
 }
 
 
